--- a/.env
+++ b/.env
@@ -70,9 +70,8 @@ NGINX_PORT=80
 NGINX_SSLPORT=443
 
 # Extensions
-CKAN__PLUGINS="envvars image_view text_view recline_view datastore datapusher"
+CKAN__PLUGINS="envvars image_view text_view recline_view datastore datapusher extrafields test"
 CKAN__HARVEST__MQ__TYPE=redis
 CKAN__HARVEST__MQ__HOSTNAME=redis
 CKAN__HARVEST__MQ__PORT=6379
 CKAN__HARVEST__MQ__REDIS_DB=1
-CKAN__PLUGINS="envvars image_view text_view recline_view datastore datapusher test"
